--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.7.7",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.45",
         "tailwindcss": "^3.4.10",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "cheerio": "^1.0.0",
+        "puppeteer": "^23.3.0"
     }
 }
